Replacing problematic file

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -5,19 +5,26 @@
    "id": "de193554-b271-4295-95e4-8904f0f6ee8a",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore mcscf chmax Dmax vmax ecore ncas Excp disp */}\n",
+    "{/* cspell:ignore webkitallowfullscreen allowfullscreen frameborder referrerpolicy Lipinska Pellow Jarman Tilly Ardle Expressibility Arrasmith */}\n",
     "\n",
-    "# Determining a molecular geometry\n",
+    "# Classical Optimizers\n",
     "\n",
-    "In the previous section, we implemented VQE to determine the ground state energy of a molecule. That is a valid use of quantum computing, but even more useful would be to determine the structure of a molecule.\n",
+    "## What is an optimizer?\n",
     "\n",
-    "It is recommended that you run this code in your own Python environment. The code is provided in this [notebook](https://learning-api.quantum.ibm.com/assets/1ff59c06-3e8a-4e81-9d9b-c649d1d41ade.ipynb).\n",
+    "Victoria Lipinska tells us about classical optimizers, and how they function as part of VQE.\n",
     "\n",
-    "## Step 1: Map classical inputs to a quantum problem\n",
+    "You will hear about a few example optimizers and how they perform in the presence and absence of noise.\n",
     "\n",
-    "Remaining with our basic example of diatomic hydrogen, the only geometric parameter to vary is the bond length. To accomplish this, we proceed as before, but using a variable in our initial molecule construction (a bond length, *x*, in the argument). This is a fairly simple change, but it does require that the variable be included in functions throughout the process, since it starts in the fermionic Hamiltonian construction and propagates through the mapping and finally to the cost function.\n",
+    "<iframe width=\"690\" height=\"390\" src=\"https://video.ibm.com/embed/recorded/132414916\"></iframe>\n",
     "\n",
-    "First, we load some of the packages we used before and define the cholesky function."
+    "**References**\n",
+    "\n",
+    "- [A Comparison of Various Classical Optimizers for a Variational Quantum Linear Solver, Pellow-Jarman, et al.](https://arxiv.org/pdf/2106.08682.pdf)\n",
+    "- [The Variational Quantum Eigensolver: A review of methods and best practices, Tilly, et al.](https://arxiv.org/abs/2111.05176)\n",
+    "- [Quantum computational chemistry, McArdle, et al.](https://arxiv.org/pdf/1808.10402.pdf)\n",
+    "- [Barren plateaus in quantum neural network training landscapes, McClean, et al.](https://arxiv.org/pdf/1803.11173.pdf)\n",
+    "- [Connecting Ansatz Expressibility to Gradient Magnitudes and Barren Plateaus, Holmes, et al.](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.3.010313)\n",
+    "- [Effect of barren plateaus on gradient-free optimization, Arrasmith, et al.](https://arxiv.org/pdf/2011.12245.pdf)"
    ]
   },
   {
