--- a/learning/courses/utility-scale-quantum-computing/lesson-06-variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-06-variational-quantum-algorithms.ipynb
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "95cd3eed-0348-4373-b664-16a65d42f1e7",
    "metadata": {},
    "outputs": [
@@ -1433,8 +1433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hy/vlb64bx10q58zgckfl9r417m0000gn/T/ipykernel_29298/1471620366.py:7: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
-      "  service = QiskitRuntimeService(channel=\"ibm_quantum\")\n"
+      "  service = QiskitRuntimeService(channel=\"ibm_cloud\")\n"
      ]
     },
     {
@@ -1460,8 +1459,8 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "# Use a quantum device\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "# QiskitRuntimeService.save_account(channel=\"ibm_cloud\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
     "backend = service.least_busy(min_num_qubits=127)\n",
     "# backend = service.backend(\"ibm_kyiv\")\n",
     "\n",
@@ -1583,14 +1582,6 @@
    "id": "f5f46775",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/doc/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1129: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
