--- a/learning/courses/utility-scale-quantum-computing/lesson-10-quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-10-quantum-circuit-optimization.ipynb
@@ -1172,21 +1172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "1ff499b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hy/vlb64bx10q58zgckfl9r417m0000gn/T/ipykernel_53481/2657754362.py:1: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
-      "  service = QiskitRuntimeService(channel=\"ibm_quantum\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
     "backend = service.backend(\"ibm_sherbrooke\")\n",
     "sampler = Sampler(backend)"
    ]
@@ -1264,21 +1255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "52e99762",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hy/vlb64bx10q58zgckfl9r417m0000gn/T/ipykernel_53481/1146593203.py:1: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
-      "  service = QiskitRuntimeService(channel=\"ibm_quantum\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")"
+    "service = QiskitRuntimeService(channel=\"ibm_cloud\")"
    ]
   },
   {
@@ -1286,18 +1268,7 @@
    "execution_count": 54,
    "id": "270db9aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IBMBackend('ibm_strasbourg')>"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# backend = service.backend('ibm_sherbrooke')\n",
     "backend = service.least_busy(\n",
@@ -1609,14 +1580,6 @@
      "output_type": "stream",
      "text": [
       "Job ID: d13rp283grvg008j12fg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/doc/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1129: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
      ]
     }
    ],
