--- a/learning/courses/utility-scale-quantum-computing/lesson-12-utility-i.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-12-utility-i.ipynb
@@ -154,21 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "acd628f1-e010-44b7-ba77-cceb3b4198c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hy/vlb64bx10q58zgckfl9r417m0000gn/T/ipykernel_2885/1390477510.py:2: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
-      "  service = QiskitRuntimeService(channel=channel)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "channel = \"ibm_quantum\"  # or \"ibm_cloud\"\n",
+    "channel = \"ibm_cloud\"\n",
     "service = QiskitRuntimeService(channel=channel)"
    ]
   },
@@ -877,14 +868,6 @@
      "output_type": "stream",
      "text": [
       "job id=d1479n6qf56g0081sxa0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/doc/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1129: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
      ]
     }
    ],
