Replacing problematic file

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -42,7 +42,33 @@
     "- what optimizers are __not__ yet available through SciPy and how to supplement in the meantime using qiskit.algorithms\n",
     "- what options are available for these optimizers and the significance for quantum computing\n",
     "\n",
-    "[SciPy](https://scipy.org/) is a free, open-source Python library with packages relevant to many areas of scientific computing, optimization among them. In particular, SciPy has an optimization package that includes [minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html):"
+    "[SciPy](https://scipy.org/) is a free, open-source Python library with packages relevant to many areas of scientific computing, optimization among them. In particular, SciPy has an optimization package that includes [minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html):\n",
+    "\n",
+    "```from scipy.optimize import minimize```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f8afd6d-5596-46e3-b5fc-de282d0b53f0",
+   "metadata": {},
+   "source": [
+    "This minimize function has several arguments, and in the context of quantum chemistry, they will be\n",
+    "- the cost function (cost_func). This is related to the Hamiltonian, but also includes some complexities such as the determination of the expectation value using Estimator, and in the case of excited state calculations may include orthogonality conditions.\n",
+    "- an initial state (x0) for the system, often the Hartree Fock state\n",
+    "- other arguments, including arguments of the cost function itself\n",
+    "- the method set to the classical optimizer you select\n",
+    "- options for the classical optimizer (not to be confused with Session options discussed in the next section)\n",
+    "\n",
+    "An example syntax is shown below. We restrict our discussion here to the last two arguments.\n",
+    "\n",
+    "\n",
+    "```minimize(\n",
+    "    cost_func,\n",
+    "    x0,\n",
+    "    args=(ansatz, hamiltonian, estimator),\n",
+    "    method=\"cobyla\",\n",
+    "    options={\"maxiter\": 200})\n",
+    "```"
    ]
   },
   {
