Replacing problematic file

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -70,6 +70,21 @@
     "    options={\"maxiter\": 200})\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "189e90d3-ac1a-401b-89bb-c2ae4e8cfea2",
+   "metadata": {},
+   "source": [
+    "SciPy has documentation on all the available minimize methods. Here are a few noteworthy examples, all of which are methods for minimizing a scalar function of one or more variables:\n",
+    "- [cobyla](https://docs.scipy.org/doc/scipy/reference/optimize.minimize-cobyla.html#optimize-minimize-cobyla): Optimization BY Linear Approximation (COBYLA) algorithm.\n",
+    "- [slsqp](https://docs.scipy.org/doc/scipy/reference/optimize.minimize-slsqp.html#optimize-minimize-slsqp): Sequential Least Squares Programming (SLSQP).\n",
+    "- [nelder-mead](https://docs.scipy.org/doc/scipy/reference/optimize.minimize-neldermead.html#optimize-minimize-neldermead) Nelder-Mead algorithm.\n",
+    "\n",
+    "These, and most available classical optimization algorithms, are local minimizers, in that they use gradients to find local minima.\n",
+    "These algorithms have several options in common, but with subtle differences. For example, all have the option to specify a maximum number of iterations using the 'maxiter': 200 notation from above. All have some option specifying a different stopping criterion based on function or variable values, though these criteria are slightly different from one algorithm to the next. Cobyla, for example, allows you to specify a tolerance ('tol': 0.0001, e.g.) which is the lower bound on a \"trust region\", determined using gradients. In comparison, SLSQP lets you specify a goal in the precision of the function used in the stopping criterion ('ftol'). Nelder-Mead lets you specify a tolerance in the difference between successive parameter ($x$) guesses (xatol), and/or a tolerance in the difference between successive values obtained for the cost function $f(x)$ (fatol).\n",
+    "For a complete list of available algorithms and options, visit [SciPy's minimize documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)."
+   ]
   }
  ],
  "metadata": {
