--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -7,6 +7,12 @@ description: What is Qiskit? This document provides an introduction to the Qiski
 
 # Introduction to Qiskit
 
+<iframe
+    className="w-full h-[405px]"
+    src="https://video.ibm.com/embed/recorded/134056207?showtitle=false"
+    allowFullScreen={true}
+/>
+
 <LegacyContent>
 <Admonition type="note">
 This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides)
