--- a/learning/courses/utility-scale-quantum-computing/lesson-01-introduction.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-01-introduction.ipynb
@@ -7,15 +7,13 @@
    "source": [
     "# Lesson 01: Introduction\n",
     "\n",
-    "# Welcome\n",
-    "\n",
     "Welcome to utility-scale quantum computing!\n",
     "\n",
-    "This course is based on a live course held at the University of Tokyo in 2024. Each lesson consists of a pdf which was used in a lecture context, and a computational lab activity. In some cases, the labs are sparse and merely show a workflow and the explanation is in the associated pdf. In other cases, the labs contain detailed explanations and mathematical motivation.\n",
+    "This course is based on a live course held at the University of Tokyo in 2024. Each lesson consists of a PDF that was used in a lecture context, and a computational lab activity. In some cases, the labs are sparse and merely show a workflow and the explanation is in the associated PDF. In other cases, the labs contain detailed explanations and mathematical motivation.\n",
     "\n",
     "**Lessons 2-6** cover famous algorithms like Grover's and quantum phase estimation. These are undeniably important to our understanding of the potential power of quantum computing, but they are mostly tangential to the utility-scale calculation to which we are building. If you are new to quantum computing, you should definitely work through these. If you have substantial experience in quantum computing, nothing new is added in these lessons that is specific to the utility-scale calculation at hand.\n",
     "\n",
-    "**Lessons 7-8** review quantum and classical simulation. Lesson 8 on classical simulation was written by Prof. of the University of Tokyo, and is hosted externally on GitHub.\n",
+    "**Lessons 7-8** review quantum and classical simulation. Lesson 8 on classical simulation was written by Professor Yoshiaki Kawase of the University of Tokyo, and is hosted externally on GitHub.\n",
     "\n",
     "**Lesson 9** focuses on modern quantum computing hardware.\n",
     "\n",
@@ -23,7 +21,7 @@
     "\n",
     "Good-faith estimates of required QPU time have been provided at the top of each lesson, but your calculations may vary slightly. There is no quiz or badge associated with this course.\n",
     "\n",
-    "We hope these instructional assets are useful to you and/or your students in achieving useful quantum computing.\n",
+    "We hope these instructional assets are useful to you and your students in achieving useful quantum computing.\n",
     "\n",
     "(PDFs of lecture notes will be available soon.)"
    ]
