--- a/learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits.ipynb
@@ -5,13 +5,13 @@
    "id": "4233533a-fcd2-4bd7-bcb8-8e0be95326e6",
    "metadata": {},
    "source": [
-    "# 2. Quantum Bits, Gates, and Circuits\n",
+    "# 2. Quantum bits, gates, and circuits\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Kifumi Numata (Apr 19, 2024)\n",
+    "Kifumi Numata (19 Apr 2024)\n",
     "\n",
-    "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
+    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 5 seconds.*\n",
     "\n",
@@ -24,16 +24,16 @@
    "metadata": {},
    "source": [
     "## 1. Introduction\n",
-    "Bits, gates, and circuits are the basic building blocks of quantum computing. You will learn Quantum computation with circuit model using quantum bits and gates, and also review the superposition, measurement, and entanglement.\n",
+    "Bits, gates, and circuits are the basic building blocks of quantum computing. You will learn quantum computation with the circuit model using quantum bits and gates, and also review the superposition, measurement, and entanglement.\n",
     "\n",
     "In this lesson you will learn:\n",
     "- Single-qubit gates\n",
-    "- Bloch Sphere\n",
+    "- Bloch sphere\n",
     "- Superposition\n",
     "- Measurement\n",
-    "- Two-qubit gates and Entanglement state\n",
+    "- Two-qubit gates and entanglement state\n",
     "\n",
-    "At the end of this lecture, you will learn about circuit depth, which is essential for utility scale quantum computing."
+    "At the end of this lecture, you will learn about circuit depth, which is essential for utility-scale quantum computing."
    ]
   },
   {
@@ -43,9 +43,9 @@
    "source": [
     "## 2. Computation as a diagram\n",
     "\n",
-    "We are using qubits or bits, we need to manipulate them in order to turn the inputs we have into the outputs we need. For the simplest programs with very few bits, it is useful to represent this process in a diagram known as a *circuit diagram*.\n",
+    "When using qubits or bits, we need to manipulate them in order to turn the inputs we have into the outputs we need. For the simplest programs with very few bits, it is useful to represent this process in a diagram known as a *circuit diagram*.\n",
     "\n",
-    "The bottom left figure is an example of a classical circuit, and the bottom right figure is an example of a quantum circuit. In both cases, the inputs are on the left and the outputs are on the right, while the operations are represented by symbols. The symbols used for the operations are called “gates”, mostly for historical reasons.\n",
+    "The bottom-left figure is an example of a classical circuit, and the bottom-right figure is an example of a quantum circuit. In both cases, the inputs are on the left and the outputs are on the right, while the operations are represented by symbols. The symbols used for the operations are called “gates”, mostly for historical reasons.\n",
     "\n",
     "![\"classical logic and quantum circuit\"](/learning/images/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits/classical-vs-quantum.avif)"
    ]
@@ -65,7 +65,7 @@
     "|\\psi\\rangle =\\alpha|0\\rangle+ \\beta|1\\rangle\n",
     "$$\n",
     "\n",
-    "where $\\alpha$ and $\\beta$ are complex number such that $|\\alpha|^2+|\\beta|^2=1$.\n",
+    "where $\\alpha$ and $\\beta$ are complex numbers such that $|\\alpha|^2+|\\beta|^2=1$.\n",
     "\n",
     "$|0\\rangle$ and $|1\\rangle$ are vectors in the two-dimensional complex vector space:\n",
     "\n",
@@ -104,9 +104,9 @@
     "\n",
     "$ |\\psi\\rangle =\\begin{pmatrix}\n",
     "\\alpha \\\\ \\beta\n",
-    "\\end{pmatrix}$ is also called the state vector.\n",
+    "\\end{pmatrix}$ is also called the statevector.\n",
     "\n",
-    "A single qubit quantum state is also represent as\n",
+    "A single-qubit quantum state is also represented as\n",
     "\n",
     "$$\n",
     "|\\psi\\rangle\n",
@@ -117,7 +117,7 @@
     "\n",
     "where $\\theta$ and $\\varphi$ are the angles of the Bloch sphere in the following figure.\n",
     "\n",
-    "![Bloch Sphere](/learning/images/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits/bloch.avif)"
+    "![Bloch sphere](/learning/images/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits/bloch.avif)"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "In the next few code cells, we will build up basic calculations from constituent pieces in Qiskit. We'll construct an empty circuit and then add quantum operations, discussing the gates and visualizing their effects as we go.\n",
-    "You can run the cell by \"Shift\" + \"Enter\". Import the library first."
+    "You can run the cell by \"Shift\" + \"Enter\". Import the libraries first."
    ]
   },
   {
@@ -151,7 +151,7 @@
    "id": "dbb2272c-996f-46a9-b5b0-f62d60c4deb3",
    "metadata": {},
    "source": [
-    "#### Preparing the quantum circuit\n",
+    "#### Prepare the quantum circuit\n",
     "We will create and draw a single-qubit circuit."
    ]
   },
@@ -230,7 +230,7 @@
    "id": "c944e04b-09b3-429b-82d8-12be6b94d86d",
    "metadata": {},
    "source": [
-    "In IBM Quantum, the initial state is set to $|0\\rangle$, so the quantum circuit above in matrix representation is\n",
+    "In IBM Quantum&reg;, the initial state is set to $|0\\rangle$, so the quantum circuit above in matrix representation is\n",
     "\n",
     "$$\n",
     "X|0\\rangle=  \\begin{pmatrix}\n",
@@ -245,7 +245,7 @@
     "\\end{pmatrix} = |1\\rangle\n",
     "$$\n",
     "\n",
-    "Next, let's run this circuit using a state vector simulator."
+    "Next, let's run this circuit using a statevector simulator."
    ]
   },
   {
@@ -521,7 +521,7 @@
     "A unitary matrix is a matrix satisfying\n",
     "\n",
     "$$\n",
-    "U^{\\dagger}U =U U^{\\dagger} = I\n",
+    "U^{\\dagger}U =U U^{\\dagger} = I.\n",
     "$$\n",
     "\n",
     "In terms of quantum computer operation, we would say that applying a quantum gate to the qubit evolves the quantum state. Common single-qubit gates include the following.\n",
@@ -644,7 +644,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Once again, the meaning and use of these are described in more detail in [Basics of Quantum Information](https://learning.quantum.ibm.com/course/basics-of-quantum-information)"
+    "The meaning and use of these are described in more detail in the [Basics of Quantum Information](/learning/courses/basics-of-quantum-information/index) course."
    ]
   },
   {
@@ -1210,7 +1210,7 @@
     "| 10          | 10           |\n",
     "| 11          | 01           |\n",
     "\n",
-    "Let us first simulate the action of this two-qubit gate when q0 and q1 are both $|0\\rangle$, and obtain the output state vector. The Qiskit syntax used is ```qc.cx(control qubit, target qubit)```."
+    "Let us first simulate the action of this two-qubit gate when q0 and q1 are both $|0\\rangle$, and obtain the output statevector. The Qiskit syntax used is ```qc.cx(control qubit, target qubit)```."
    ]
   },
   {
