copyedit rest of lesson 02

--- a/learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits.ipynb
@@ -1461,7 +1461,7 @@
     "\n",
     "but there are no coefficients $a_0, a_1, b_0, $ and $b_1$ to satisfy these two equations. Therefore, $|\\psi_{AB}\\rangle$ is not represented by a tensor product of individual quantum state, $|\\psi\\rangle_A$ and $|\\psi\\rangle_B$, and this means that $|\\psi_{AB}\\rangle =  \\frac{1}{\\sqrt{2}}(|00\\rangle +|11\\rangle)$ is entangled state.\n",
     "\n",
-    "Let us create the Bell state and run it on a real quantum computer. Now we will follow the four steps to writing a quantum program, called **Qiskit Patterns**:\n",
+    "Let us create the Bell state and run it on a real quantum computer. Now we will follow the four steps to writing a quantum program, called **Qiskit patterns**:\n",
     "\n",
     "    1. Map problem to quantum circuits and operators\n",
     "    2. Optimize for target hardware\n",
@@ -1525,7 +1525,7 @@
    "id": "a426fb27-ac0b-4d1e-840c-21729ca630ce",
    "metadata": {},
    "source": [
-    "If you do not have `qiskit-ibm-runtime`, you will need to install this first. For more information about Qiskit Runtime is [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/runtime_service)."
+    "If you do not have `qiskit-ibm-runtime`, you will need to install this first. For more information about Qiskit Runtime, [check out the API reference.](/docs/api/qiskit-ibm-runtime/runtime_service)"
    ]
   },
   {
@@ -1593,7 +1593,7 @@
    "id": "f7a015bb-1813-4acf-97e5-8489711b53fb",
    "metadata": {},
    "source": [
-    "Transpiling the circuit is yet another complex process. Very briefly, this rewrites the circuit into a logically equivalent one using \"native gates\" (gates that a particular quantum computer can implement) and maps the qubits in your circuit to optimal real qubits on the target quantum computer. For more on transpilation, see this [documentation](https://docs.quantum.ibm.com/api/qiskit/transpiler#overview)."
+    "Transpiling the circuit is yet another complex process. Very briefly, this rewrites the circuit into a logically equivalent one using \"native gates\" (gates that a particular quantum computer can implement) and maps the qubits in your circuit to optimal real qubits on the target quantum computer. For more on transpilation, see this [documentation](/docs/api/qiskit/transpiler#overview)."
    ]
   },
   {
@@ -1615,7 +1615,7 @@
    "id": "1f689582-b474-46aa-aa9f-208428db538a",
    "metadata": {},
    "source": [
-    "You can see that in the transpilation the circuit was rewritten using new gates. For more on the ECR gate, please refer this [documentation](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.library.ECRGate#ecrgate)."
+    "You can see that in the transpilation the circuit was rewritten using new gates. For more on the ECR gate, please refer this [documentation](/docs/api/qiskit/qiskit.circuit.library.ECRGate#ecrgate)."
    ]
   },
   {
@@ -1666,7 +1666,7 @@
    "id": "d568cee6-69f4-4e3a-89a2-4826720d2d60",
    "metadata": {},
    "source": [
-    "You can also check the job status from your IBM Quantum Dashboard：https://quantum.cloud.ibm.com/workloads"
+    "You can also check the job status from your IBM Quantum dashboard：https://quantum.cloud.ibm.com/workloads"
    ]
   },
   {
@@ -1701,9 +1701,9 @@
    "id": "554b7575-413e-4957-83db-9131a0b4bdaf",
    "metadata": {},
    "source": [
-    "#### Step 4. Postprocess the results\n",
+    "#### Step 4. Post-process the results\n",
     "\n",
-    "Finally, we must post-process our results to create outputs in the expected format like values or graphs."
+    "Finally, we must post-process our results to create outputs in the expected format, like values or graphs."
    ]
   },
   {
@@ -1778,7 +1778,7 @@
    "source": [
     "The \"depth\" of a quantum circuit is a useful and common metric to describe quantum circuits. Trace a path through the quantum circuit, moving left to right, only changing qubits when they are connected by a multi-qubit gate. Count the number of gates along that path. The maximum number of gates for any such path through a circuit is the depth. In modern noisy quantum computers, low-depth circuits have fewer errors and are likely to return good results. Very deep circuits are not.\n",
     "\n",
-    "Using `QuantumCircuit.depth()`, we can check the depth of our quantum circuit. The depth of the above circuit is 4. The top qubit has only 3 gates including the measurement. But there is a path from the top qubit down to either qubit 1 or qubit 2 which involves another CNOT gate."
+    "Using `QuantumCircuit.depth()`, we can check the depth of our quantum circuit. The depth of the above circuit is 4. The top qubit has only three gates including the measurement. But there is a path from the top qubit down to either qubit 1 or qubit 2 which involves another CNOT gate."
    ]
   },
   {
@@ -1938,7 +1938,7 @@
    "source": [
     "## 5. Summary\n",
     "\n",
-    "You have learned Quantum computation with circuit model using quantum bits and gates, and also reviewed superposition, measurement, and entanglement. You also have learned the method to execute the quantum circuit on the real quantum device.\n",
+    "You have learned quantum computation with the circuit model using quantum bits and gates, and you have reviewed superposition, measurement, and entanglement. You also have learned the method to execute the quantum circuit on the real quantum device.\n",
     "\n",
     "In the final exercise to create a GHZ circuit, you have tried to reduce the circuit depth, which is an important factor for obtaining a utility scale solution in a noisy quantum computer.  In the later lessons of this course, you will learn about noise and about error mitigation methods in detail. In this lesson, as an introduction, we considered reducing the circuit depth in an ideal device, but in reality, we must consider the constraints of real device, such as qubit connectivity.  You will learn more about this in subsequent lessons in this course."
    ]
